<resources>
    <string name="app_name">Calculadora General</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="yes">SÍ</string>
    <string name="no">NO</string>

    <string name="item1"> • Framingham (usando lípidos)</string>
    <string name="item2"> • Riesgo enfermedad coronaria</string>
    <string name="item3"> • Síndrome metabólico</string>
    <string name="item4"> • Índice de masa corporal</string>
    <string name="item5"> • Riesgo cardiaco postoperatorio</string>
    <string name="item6"> • Calculadora Asofarma</string>
    <string name="item7"> • Menu </string>
    <string name="item8"> • Marcas patrocinantes </string>


    <string name="prueba">&#xf11b;</string>
    <string name="share">Compartir ...</string>

    <!-- TODO: Remove or change this placeholder text -->

    //Text calculator
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="age">Edad:</string>
    <string name="Systolic_pressure">Presión sistólica (mmHg):</string>
    <string name="Diastolic_pressure">Presión diastólica (mmHg):</string>
    <string name="hypertension">¿Está en tratamiento para  <br />la hipertensión?</string>
    <string name="smokes">¿Fuma en la actualidad?</string>
    <string name="diabetic">¿Es diabético?</string>
    <string name="HDL_cholesterol">Colesterol HDL:</string>
    <string name="total_cholesterol">Colesterol total:</string>
    <string name="btnCalculate">Calcular</string>
    <string name="waistCircumference">Circunferencia de cintura:</string>
    <string name="triglicéridos">Nivel de triglicéridos (mg/dL):</string>
    <string name="Glucose">Glucosa en ayunas (mg/dL):</string>
    <string name="metabolicSyndrome">Síndrome metabólico:</string>
    <string name="stature">Estatura:</string>
    <string name="weight">Peso:</string>
    <string name="risk0">Tercer ruido cardiaco o distención venosa yugular</string>
    <string name="risk1">Infarto agudo de miocardio en los últimos 6 meses</string>
    <string name="risk2">Ritmo no sinusal o contracción atrial prematura en ECG</string>
    <string name="risk3">Más de 5 contracciones ventriculares prematuras</string>
    <string name="risk4">Edad mayor a 70 años</string>
    <string name="risk5">Operaciones de emergencia</string>
    <string name="risk6">Mala condición médica general</string>
    <string name="risk7">Cirugía intratorácica, intraperitoneal o aórtica</string>
    <string name="risk8">Estenosis valvular aórtica importante</string>
    <string name="references">Referencias:</string>
    <string name="observations">Observaciones:</string>

     //Message calculation
    <string name="message_risk">Riesgo cardiovascular:</string>
    <string name="message_risk1">Riesgo normal según edad y sexo:</string>
    <string name="message_risk2">Riesgo óptimo según edad y sexo:</string>
    <string name="message_risk3">Su edad Cardiovascular en años es :</string>
    <string name="message_risk4">Riesgo de enfermedad coronaria :</string>
    <string name="message_risk5">Paciente con síndrome metabólico :</string>
    <string name="message_risk6">Su IMC es </string>
    <string name="years"> años </string>
    <string name="title_item1">Predicción de riesgo de ECV usando lípidos </string>
    <string name="title_item2">Predicción de riesgo enfermedad coronaria </string>
    <string name="title_item3">Predicción del síndrome metabólico </string>
    <string name="title_item4">Calculo de índice de masa corporal</string>
    <string name="title_item5">Calculo de riesgo cardiaco postoperatorio</string>


    //Degree of obesity
    <string-array name="degradeObesity">
        <item>Este es un paciente con bajo peso</item>
        <item>Este es un paciente con peso normal</item>
        <item>Este es un paciente con sobrepeso</item>
        <item>Este es un paciente con obesidad grado I</item>
        <item>Este es un paciente con obesidad grado II</item>
        <item>Este es un paciente con obesidad grado III</item>
    </string-array>

    //Degree of obesity
    <string-array name="Postoperative">
        <item>Este es un paciente clase I</item>
        <item>Este es un paciente clase II</item>
        <item>Este es un paciente clase III</item>
        <item>Este es un paciente clase IV</item>

    </string-array>
    <string name="PostoperativeMessage0">Su tasa de complicación es:</string>
    <string name="PostoperativeMessage1">Su tasa de complicaciones graves es:</string>
    <string name="PostoperativeMessage2">Su tasa de muerte cardiaca es:</string>

    //Font
    <string name="fontawesome">fonts/fontawesome.ttf</string>
    <string name="flaticon">fonts/flaticon.ttf</string>

    <string name="blood">&#xe000;</string>
    <string name="cigarette">&#xe901;</string>
    <string name="fat">&#xe902;</string>
    <string name="hearbeat">&#xe903;</string>
    <string name="sex">&#xe905;</string>
    <string name="measure">&#xe005;</string>
    <string name="medical">&#xe907;</string>
    <string name="olives">&#xe007;</string>
    <string name="raindrop">&#xe008;</string>
    <string name="rules">&#xe90a;</string>
    <string name="time">&#xe00a;</string>
    <string name="toolWeight">&#xe00b;</string>
    <string name="waterBlack">&#xe00c;</string>
    <string name="weightIcon">&#xe90c;</string>


    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main_splash_screen">MainSplashScreen</string>
    //User messages
    <string name="messages1">Todos los campos son necesarios </string>//incomplete data
    <string name="messages2">Por favor, verifique los tipos de datos ingresados  </string>//type data
    <string name="messages3">Se presenta un inconveniente con la operación  </string>//Try catch
    <string name="messages4">Se presenta un inconveniente al compartir  </string>//error send
    <string name="messages5">Cargando  PDF....  </string>//error send
    <string name="messages6">Se presenta un inconveniente al crear la imagen  </string>//error send

    //References
    <string name="ref1">1. Framingham Heart Study. Cardiovascular Disease (10-year risk). [en línea] Disponible en: https://www.framinghamheartstudy.org/risk-functions/cardiovascular-disease/10-year-risk.php Consultado: 22 06 2015</string>
    <string name="ref2">1. Expert Panel on Detection, Evaluation, and Treatment of High Blood Cholesterol in Adults. Executive Summary of the Third Report of the National Cholesterol Education Program (NCEP) Expert Panel on Detection, Evaluation, and Treatment of High Blood Cholesterol in Adults (Adult Treatment Panel III). JAMA. 2001; 285(19):2486-2497. doi:10.1001/jama.285.19.2486.</string>
    <string name="ref3">1. Joint Scientific Statement:<br />Harmonizing the Metabolic Syndrome: A Joint Interim Statement of the International Diabetes Federation Task Force on Epidemiology and Prevention; National Heart, Lung, and Blood Institute; American Heart Association; World Heart Federation; International Atherosclerosis Society; and International Association for the Study of Obesity K.G.M.M. Alberti, Robert H. Eckel, Scott M. Grundy, Paul Z. Zimmet, James I. Cleeman, Karen A. Donato, Jean-Charles Fruchart, W. Philip T. James, Catherine M. Loria, and Sidney C. Smith, Jr. Circulation. 2009; 120:1640-1645, published online before print October 5 2009, doi:10.1161/CIRCULATIONAHA.109.192644</string>
    <string name="ref4">1. Pi-Sunyer F, et al. Clinical Guidelines on the Identification, Evaluation, and Treatment of Overweight and Obesity in Adults. [en línea] Disponible en: http://www.nhlbi.nih.gov/files/docs/guidelines/obesity_guidelines_archive.pdf</string>
    <string name="ref5">2. AHA/ACC/TOS Prevention Guideline:2013 AHA/ACC/TOS Guideline for the Management of Overweight and Obesity in Adults: A Report of the American College of Cardiology/American Heart Association Task Force on Practice Guidelines and The Obesity Society Michael D. Jensen, Donna H. Ryan, Caroline M. Apovian, Jamy D. Ard, Anthony G. Comuzzie, Karen A. Donato, Frank B. Hu, Van S. Hubbard, John M. Jakicic, Robert F. Kushner, Catherine M. Loria, Barbara E. Millen, Cathy A. Nonas, F. Xavier Pi-Sunyer, June Stevens, Victor J. Stevens, Thomas A. Wadden, Bruce M. Wolfe, and Susan Z. Yanovski Circulation. 2013;01.cir.0000437739.71477.eepublished online before print November 12 2013, doi:10.1161/01.cir.0000437739.71477.ee</string>
    <string name="ref6">2. Alberti K.G, Eckel R, Grundy S, Zimmet P, Cleeman J, et al. Harmonizing the Metabolic Syndrome A Joint Interim Statement of the International Diabetes Federation TaskForce on Epidemiology and Prevention; National Heart, Lung, and Blood Institute; American Heart Association; World Heart Federation;International Atherosclerosis Society; and International Association for the Study of Obesity. (Circulation. 2009;120:1640-1645.</string>
    <string name="ref7">1.Halub M, Sidwell R. Cardiac Risk Stratification and Protection. Surg Clin N Am 95 (2015) 217–235.</string>
    <string name="ref8">2.Kraus, J, et al. Consenso de evaluación del riesgo cardiovascular en cirugía no cardíaca. Rev Arg Cardiol. 2005;73(5):381-396.</string>
    <string name="ref9">Referencia adicional para esta calculadora:<br />Aschner P, Buendía R, Brajkovich I, Gonzalez A, Figueredo R, Juarez x, et al. Determination of the cutoff point for waist circumference that establishes the presence of abdominal obesity in Latin American men and women. Diab Res Clin Pract 2011;93:243-247.</string>

    <string name="textMetabolic">El Síndrome Metabólico incrementa 2 veces el riesgo de enfermedad cardiovascular durante los próximos 5 a 10 años y aumenta 5 veces el riesgo de diabetes mellitus tipo 2.</string>
    <string name="textPreoperative">El puntaje de riesgo de Goldman establece la probabilidad de  complicaciones cardiacas (%) en pacientes llevados a cirugía no cardiaca, en relación a la presencia o no de factores de riesgo específicos. Clasifica a los pacientes en cuatro clases (I a IV). El incremento en la clase del paciente se relaciona con el incremento en la probabilidad de complicaciones (complicaciones cardíacas, complicaciones graves y muerte cardiaca). Clase I (riesgo bajo): puntaje de 0 a 5; clase II (riesgo moderado): puntaje 6-12; clase III (riesgo alto): puntaje 13-25; clase IV (riesgo muy alto): puntaje ≥26).</string>

    <string name="dialogError">Se presenta un inconveniente con el aplicativo</string>
    <string name="dialogRestart">Reiniciar </string>
    <string name="dialogTofinalize">Finalizar </string>
    <string name="deposit">Ingresar</string>
    <string name="password">Contraseña</string>
    <string name="dialogErrorPassword">Contraseña incorrecta</string>
</resources>
