<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/item1"

            android:title="@string/item1" />
        <item android:id="@+id/item2"

            android:title="@string/item2" />
        <item android:id="@+id/item3"
            android:title="@string/item3" />
        <item android:id="@+id/item4"

            android:title="@string/item4" />
        <item android:id="@+id/item5"

            android:title="@string/item5" />

    </group>

  <!--  <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>