<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="80dp"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/dialogError"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/dialogRestart"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/dialogTofinalize"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_margin="5dp" />
    </LinearLayout>

</LinearLayout>