<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/BtnCalculator"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:elevation="2dp"
        android:text="@string/btnCalculate"
        android:textColor="#ffffff" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/BtnCalculator"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|top"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/background_logo"
                android:elevation="5dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ImgLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="Logo"
                    android:src="@mipmap/ic_launcher" />
            </RelativeLayout>

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:stretchColumns="1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imgSex"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_column="0"
                            android:gravity="center"
                            android:src="@mipmap/ic_sex" />

                        <RadioGroup
                            android:id="@+id/GroupSex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_gravity="left"
                            android:layout_span="4"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/RadioMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:text="@string/male"
                                android:textSize="@dimen/fontSize" />

                            <RadioButton
                                android:id="@+id/RadioFamele"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:text="@string/female"
                                android:textSize="@dimen/fontSize" />
                        </RadioGroup>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/EdiAge"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_column="0"
                            android:layout_span="4"
                            android:hint="@string/age"
                            android:inputType="number"
                            android:maxLength="3"
                            android:textSize="@dimen/fontSize">

                        </EditText>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/EdiSystolicPressure"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_column="0"
                            android:layout_span="4"
                            android:hint="@string/Systolic_pressure"
                            android:inputType="number"
                            android:maxLength="3"
                            android:textSize="@dimen/fontSize" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="3dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imgHeartbeat"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_column="0"
                            android:gravity="center"
                            android:src="@mipmap/ic_heartbeat" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:elegantTextHeight="true"
                            android:text="@string/hypertension"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="12dip" />

                        <Switch
                            android:id="@+id/switchHypertension"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:checked="false" />

                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#FADDDA" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="3dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imgSmokes"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_column="0"
                            android:gravity="center"
                            android:src="@mipmap/ic_cigarette" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:text="@string/smokes"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="12dip" />

                        <Switch
                            android:id="@+id/switchSmoke"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:checked="false" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#FADDDA" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="3dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imgSyringe"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_column="0"
                            android:gravity="center"
                            android:src="@mipmap/ic_syringe" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:text="@string/diabetic"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textSize="12dip" />

                        <Switch
                            android:id="@+id/switchDiabetes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:checked="false" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/EdiCholesterolHDL"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_column="0"
                            android:layout_span="4"
                            android:hint="@string/HDL_cholesterol"
                            android:inputType="number"
                            android:maxLength="3"
                            android:textSize="@dimen/fontSize" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/EdiCholesterolTotal"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_column="0"
                            android:layout_span="4"
                            android:hint="@string/total_cholesterol"
                            android:inputType="number"
                            android:maxLength="3"
                            android:textSize="@dimen/fontSize" />
                    </TableRow>


                </TableLayout>
            </ScrollView>
            <![CDATA[

            />

        ]]>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/BtnFabReload"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="35dp"
            android:src="@mipmap/ic_reload"
            app:elevation="3dp" />

    </FrameLayout>
</RelativeLayout>

