<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/containerDialog"
    android:orientation="vertical">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:gravity="center"
        android:elevation="5dp">

        <ImageView
            android:id="@+id/Btn_Previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"

            android:layout_margin="5dp"
            android:src="@mipmap/ic_previous"
            android:padding="3dp" />

        <ImageView
            android:id="@+id/Btn_Share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@mipmap/ic_share"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:padding="3dp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_above="@+id/scrollView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_item4"
                android:id="@+id/textViewTitle"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/fontSizeTitle" />

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="120dp"
                        android:id="@+id/imageView"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/message_risk6"
                        android:id="@+id/textAnswer"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/fontSizeMin"

                        android:textStyle="bold"
                        android:layout_gravity="left"
                        android:layout_margin="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/message_risk6"
                        android:id="@+id/textViewIMC"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/fontSizeMin"
                        android:textStyle="bold"
                        android:layout_gravity="left"
                        android:layout_margin="4dp" />
                </LinearLayout>
            </RelativeLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textMultiLine"
                android:hint="@string/observations"
                android:ems="10"
                android:textSize="@dimen/fontSize"
                android:id="@+id/editTextObservation"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="0.10" />

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:id="@+id/scrollView3"
        android:layout_alignParentBottom="true"
        android:visibility="invisible">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/references"
                android:id="@+id/textView21"
                android:layout_margin="10dp"
                android:layout_gravity="left"
                android:textSize="@dimen/fontSizeTitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="&lt;b>1.&lt;/b> Halub M, Sidwell R. Cardiac Risk Stratification and Protection. Surg Clin N Am 95 (2015) 217–235. \n\n&lt;b>2.&lt;/b> raus, J, et al. Consenso de evaluación del riesgo cardiovascular en cirugía no cardíaca. Rev Arg Cardiol. 2005;73(5):381-396. "
                android:id="@+id/textViewReference"
                android:textSize="@dimen/fontSizeMin"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_margin="10dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>